refactor(fabric): 重构1.20.4模组